fixes bug 221491 "crash [@ nsHostResolver::GetHostToLookup]" r=dougt sr=bzbarsky a=dbaron